fix: Measures for Selection overlays Parent Visibility Toggles (CODAP-800)
[CODAP-800](https://concord-consortium.atlassian.net/browse/CODAP-800)

--- a/v3/src/components/graph/adornments/components/measures-for-selection-banner.scss
+++ b/v3/src/components/graph/adornments/components/measures-for-selection-banner.scss
@@ -14,5 +14,5 @@
   padding: 0 5px;
   pointer-events: all;
   text-align: left;
-  width: calc(100% - 10px);
+  width: 100%;
 }
